<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".ui.screens.about.AboutFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.59" />

    <TextView
        android:id="@+id/about_description"
        android:layout_width="354dp"
        android:layout_height="331dp"
        android:scrollbars="vertical"
        android:fontFamily="@font/gothamssm_book"
        android:inputType="none"
        android:text="@string/about_lorem_ipsum"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/guide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.886"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/about_credits"
        android:layout_width="354dp"
        android:layout_height="53dp"
        android:fontFamily="@font/gothamssm_bold"
        android:inputType="none"
        android:text="@string/about_developer"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guide"
        app:layout_constraintVertical_bias="0.034" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="157dp"
        android:layout_height="55dp"
        android:src="@drawable/ic_dashboard_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.738"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/aboutDeveloperContact"
        android:layout_width="73dp"
        android:layout_height="48dp"
        android:autoLink="web"
        android:fontFamily="@font/gothamssm_book"
        android:inputType="none"
        android:text="@string/by_developer"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.739"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>