<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.detailedHouse.DetailedHouseFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />

    <ImageView
        android:id="@+id/housePhotoDetailed"
        android:layout_width="match_parent"
        android:layout_height="198dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/baseline_house_24"
        tools:ignore="ContentDescription" />

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_detailed_house"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:elevation="0dp"
            app:layout_scrollFlags="scroll|enterAlways"
            app:navigationIcon="@drawable/ic_back"
            app:titleTextColor="@color/black" />
    </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/light_grey"
        app:cardCornerRadius="20sp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guide"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="1dp">

            <TextView
                android:id="@+id/housePriceDetailed"
                android:layout_width="139dp"
                android:layout_height="24dp"
                android:fontFamily="@font/gothamssm_bold"
                android:textColor="@color/black"
                android:textIsSelectable="false"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.084"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.076" />

            <TextView
                android:id="@+id/house_distance_number_detailed"
                android:layout_width="55dp"
                android:layout_height="14dp"
                android:fontFamily="@font/gothamssm_book"
                android:textIsSelectable="false"
                android:textSize="8sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.977"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.088"
                app:tint="@color/medium_grey" />

            <ImageView
                android:id="@+id/bedroomIconDetailed"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@drawable/ic_bed"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.48"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.087"
                app:tint="@color/medium_grey"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/house_bedroom_number_detailed"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:fontFamily="@font/gothamssm_book"
                android:textIsSelectable="false"
                android:textSize="8sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.526"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.087" />

            <ImageView
                android:id="@+id/bathroomIconDetailed"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@drawable/ic_bath"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.605"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.087"
                app:tint="@color/medium_grey"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/house_bathroom_number_detailed"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:fontFamily="@font/gothamssm_book"
                android:textIsSelectable="false"
                android:textSize="8sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.651"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.087"
                app:tint="@color/medium_grey" />

            <ImageView
                android:id="@+id/layers_icon_detailed"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@drawable/ic_layers"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.73"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.087"
                app:tint="@color/medium_grey"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/house_layers_number_detailed"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:fontFamily="@font/gothamssm_book"
                android:textIsSelectable="false"
                android:textSize="8sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.777"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.087"
                app:tint="@color/medium_grey" />

            <ImageView
                android:id="@+id/ubication_icon_detailed"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@drawable/ic_location"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.839"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.087"
                app:tint="@color/medium_grey"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/descriptionText"
                android:layout_width="125dp"
                android:layout_height="26dp"
                android:fontFamily="@font/gothamssm_bold"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.08"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.153" />

            <TextView
                android:id="@+id/locationText"
                android:layout_width="125dp"
                android:layout_height="26dp"
                android:fontFamily="@font/gothamssm_bold"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.079"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.605" />

            <TextView
                android:id="@+id/descriptionDetailedTextView"
                android:layout_width="346dp"
                android:layout_height="184dp"
                android:layout_marginHorizontal="0dp"
                android:fontFamily="@font/gothamssm_book"
                android:scrollbars="vertical"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.488"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.317" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapViewHouseLocation"
                android:layout_width="350dp"
                android:layout_height="183dp"
                android:contentDescription="@string/map_of_the_house_location"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.487"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.96"
                map:uiRotateGestures="false"
                map:uiZoomControls="false" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>